--- a/b-1f-jun-18.html
+++ b/b-1f-jun-18.html
@@ -16,6 +16,7 @@
     <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-6">1.6</a>
     <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-7">1.7</a>
     <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-8">1.8</a>
+    <a style="background-color: #b30000;" href="b-1f-jun-18-1.html" id="1-9">1.9</a>
     <br>
     <br>
     <a href="#" id="orange">2.1</a>
@@ -24,8 +25,6 @@
     <a href="#" id="orange">2.4</a>
     <a href="#" id="orange">2.5</a>
     <a href="#" id="orange">2.6</a>
-    <a href="#" id="orange">2.7</a>
-    <a href="#" id="orange">2.8</a>
     <br>
     <br>
     <a href="#" id="yellow">3.1</a>
@@ -33,9 +32,6 @@
     <a href="#" id="yellow">3.3</a>
     <a href="#" id="yellow">3.4</a>
     <a href="#" id="yellow">3.5</a>
-    <a href="#" id="yellow">3.6</a>
-    <a href="#" id="yellow">3.7</a>
-    <a href="#" id="yellow">3.8</a>
     <br>
     <br>
     <a href="#" id="lime">4.1</a>
@@ -43,9 +39,6 @@
     <a href="#" id="lime">4.3</a>
     <a href="#" id="lime">4.4</a>
     <a href="#" id="lime">4.5</a>
-    <a href="#" id="lime">4.6</a>
-    <a href="#" id="lime">4.7</a>
-    <a href="#" id="lime">4.8</a>
     <br>
     <br>
     <a href="#" id="blue">5.1</a>
@@ -53,9 +46,6 @@
     <a href="#" id="blue">5.3</a>
     <a href="#" id="blue">5.4</a>
     <a href="#" id="blue">5.5</a>
-    <a href="#" id="blue">5.6</a>
-    <a href="#" id="blue">5.7</a>
-    <a href="#" id="blue">5.8</a>
     <br>
     <br>
     <a href="#" id="navy">6.1</a>
@@ -63,29 +53,11 @@
     <a href="#" id="navy">6.3</a>
     <a href="#" id="navy">6.4</a>
     <a href="#" id="navy">6.5</a>
-    <a href="#" id="navy">6.6</a>
-    <a href="#" id="navy">6.7</a>
-    <a href="#" id="navy">6.8</a>
     <br>
     <br>
     <a href="#" id="magenta">7.1</a>
     <a href="#" id="magenta">7.2</a>
     <a href="#" id="magenta">7.3</a>
-    <a href="#" id="magenta">7.4</a>
-    <a href="#" id="magenta">7.5</a>
-    <a href="#" id="magenta">7.6</a>
-    <a href="#" id="magenta">7.7</a>
-    <a href="#" id="magenta">7.8</a>
-    <a href="#" id="magenta">7.9</a>
-    <br>
-    <br>
-    <a href="#" id="purple">8.1</a>
-    <a href="#" id="purple">8.2</a>
-    <a href="#" id="purple">8.3</a>
-    <a href="#" id="purple">8.4</a>
-    <a href="#" id="purple">8.5</a>
-    <a href="#" id="purple">8.6</a>
-    <a href="#" id="purple">8.7</a>
   </div>
     <footer>Biology Foundation Paper 1 June 2018</footer>
   </body>
