--- a/b-1f-jun-18-1.html
+++ b/b-1f-jun-18-1.html
@@ -15,8 +15,8 @@
     </p>
     <h1><a href="b-1f-jun-18.html">SonicScience - Biology</a></h1>
     <div id="box">
-    <a href="#" id="red">1</a>
-    <a href="#" id="orange">2</a>
+    <a href="b-1f-jun-18-1.html" id="red">1</a>
+    <a href="b-1f-jun-18-2.html" id="orange">2</a>
     <a href="#" id="yellow">3</a>
     <a href="#" id="lime">4</a>
     <a href="#" id="blue">5</a>
@@ -267,6 +267,7 @@ Tick <b>three</b> boxes.
       if (localStorage.getItem("b-1f-jun-18-1-1") == "correct" && localStorage.getItem("b-1f-jun-18-1-2") == "correct" && localStorage.getItem("b-1f-jun-18-1-3") == "correct" && localStorage.getItem("b-1f-jun-18-1-4") == "correct"){
         if (localStorage.getItem("b-1f-jun-18-1-5") == "correct" && localStorage.getItem("b-1f-jun-18-1-6") == "correct" && localStorage.getItem("b-1f-jun-18-1-7") == "correct" && localStorage.getItem("b-1f-jun-18-1-8") == "correct" && localStorage.getItem("b-1f-jun-18-1-9") == "correct") {
             document.getElementById('red').style.backgroundColor = "#99ff99";
+            localStorage.setItem("1-complete", "true");
         }
       }
       var questionWorth = document.getElementById('marks-' + i);
